# Helthcare-Test-AP

./: DEPLOYMENT-INSTRUCTIONS.md  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  deploy.yml
docs/: CLOUD-SHELL-DEPLOYMENT.md  COMPLIANCE.md  DEPLOYMENT.md  GITHUB-SETUP.md  HEALTHCARE-GENAI-DEPLOYMENT.md  PRODUCTION-SETUP.md
infra/database/: deploy.sh  policy_tags.sql  schema.sql  security_policies.sql  seed_data.sql  views.sql
infra/database/migrations/: 001_initial_schema.sql
infra/terraform/: ai_services.tf  bigquery.tf  cloud_run.tf  iam.tf  kms.tf  main.tf  production.tfvars  pubsub.tf  secrets.tf  staging.tfvars  storage.tf  variables.tf
scripts/: deploy-local-simple.sh  deploy-production.sh  pre-deployment-checklist.md  validate-deployment.sh
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/app/: __init__.py  config.py  main.py  middleware.py
services/ai-orchestrator/app/routers/: ai.py  health.py
services/ai-orchestrator/app/services/: evaluation_service.py  gemini_service.py  rag_service.py  test_generation_service.py  vector_search_service.py
services/alm-adapters/: Dockerfile  pyproject.toml
services/alm-adapters/app/: __init__.py  config.py  main.py  middleware.py
services/alm-adapters/app/routers/: alm.py  health.py  webhooks.py
services/alm-adapters/app/services/: alm_factory.py  base_adapter.py
services/alm-adapters/app/services/adapters/: azure_devops_adapter.py  jira_adapter.py  polarion_adapter.py
services/ingest-api/: Dockerfile  pyproject.toml
services/ingest-api/app/: __init__.py  config.py  main.py  middleware.py
services/ingest-api/app/routers/: files.py  health.py  webhooks.py
services/ingest-api/app/services/: auth_service.py  bigquery_service.py  dlp_service.py  document_ai_service.py  pubsub_service.py  storage_service.py
shared/: openapi.yaml  package.json
shared/src/: types.ts
web/: .env.example  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
web/docs/: TESTING.md
web/src/app/: layout.tsx  page.tsx
web/src/app/auth/signin/: page.tsx
web/src/app/compliance/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/projects/: page.tsx
web/src/app/projects/[id]/: page.tsx
web/src/app/projects/new/: page.tsx
web/src/app/requirements/: page.tsx
web/src/app/requirements/[id]/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/team/: page.tsx
web/src/app/tests/: page.tsx
web/src/components/ai/: ai-compliance-analyzer.tsx  ai-test-generator.tsx  document-ai-parser.tsx
web/src/components/ai/__tests__/: ai-test-generator.test.tsx
web/src/components/auth/: auth-layout.tsx  signin-form.tsx
web/src/components/compliance/: compliance-dashboard.tsx
web/src/components/dashboard/: compliance-overview.tsx  dashboard-shell.tsx  projects-overview.tsx  quick-actions.tsx  recent-activity.tsx
web/src/components/dashboard/__tests__/: compliance-overview.test.tsx  dashboard-header.test.tsx
web/src/components/navigation/: main-nav.tsx
web/src/components/profile/: user-profile.tsx
web/src/components/projects/: new-project-form.tsx  project-detail.tsx  projects-list.tsx
web/src/components/providers/: auth-provider.tsx  query-provider.tsx  toast-provider.tsx
web/src/components/requirements/: requirement-detail.tsx  requirements-list.tsx
web/src/components/search/: global-search.tsx
web/src/components/security/: audit-trail.tsx  security-monitor.tsx
web/src/components/settings/: settings-form.tsx
web/src/components/team/: team-list.tsx
web/src/components/tests/: tests-list.tsx
web/src/components/ui/: badge.tsx  error-boundary.tsx  icons.tsx  loading.tsx
web/src/lib/: accessibility.ts  auth.ts  firebase.ts  test-utils.tsx  utils.ts
web/src/lib/__tests__/: security-test-utils.test.ts
web/src/styles/: globals.css
web/src/types/: auth.ts
web/tests/: global-setup.ts  global-teardown.ts
web/tests/e2e/: compliance-workflow.spec.ts
